--- a/yumaatt/group_vars/phoply-development-phoply_dev1.yml
+++ b/yumaatt/group_vars/phoply-development-phoply_dev1.yml
@@ -21,11 +21,11 @@ plenv:
       - 5.16.3
     perl_version: 5.16.3
 
-ndenv:
+nodenv:
   - user: docker
     node_versions:
-      - v0.10.25
-    node_version: v0.10.25
+      - 0.10.25
+    node_version: 0.10.25
 
 goenv:
   - user: docker
