--- a/yumaatt/group_vars/phoply-development.yml
+++ b/yumaatt/group_vars/phoply-development.yml
@@ -17,11 +17,11 @@ group_plenv:
       - 5.16.3
     perl_version: 5.16.3
 
-group_ndenv:
+group_nodenv:
   - user: docker
     node_versions:
-      - v0.10.25
-    node_version: v0.10.25
+      - 0.10.25
+    node_version: 0.10.25
 
 group_goenv:
   - user: docker
