Add ghq to homebrew

--- a/yumaatt/roles/homebrew/defaults/main.yml
+++ b/yumaatt/roles/homebrew/defaults/main.yml
@@ -58,6 +58,7 @@ homebrew_packages:
   #- { name: phantomjs }
   - { name: autojump }
   - { name: source-highlight }
+  - { name: ghq }
 #  - { name: evm }
 #  - { name: boris }
 #  - { name: composer }
